--- a/DSCI_632_Final.ipynb
+++ b/DSCI_632_Final.ipynb
@@ -1222,29 +1222,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(\"Based on the evaluation results, the model with the lowest RMSE as the best model for predicting solar radiation.\\n After evaluating the models, we can say the best-performing one based on the RMSE metric.\\n GBTRegressionModel with RMSE 191.167 can  be used for predicting solar radiation with confidence.\")"
+        "Based on the evaluation results, the model with the lowest RMSE as the best model for predicting solar radiation.After evaluating the models, we can say the best-performing one based on the RMSE metric. GBTRegressionModel with RMSE 191.167 can  be used for predicting solar radiation with confidence."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZMbuFhu_6QoR",
-        "outputId": "5ce75e80-586a-4c7b-b30e-184bdf6c9a87"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Based on the evaluation results, the model with the lowest RMSE as the best model for predicting solar radiation.\n",
-            " After evaluating the models, we can say the best-performing one based on the RMSE metric.\n",
-            " GBTRegressionModel with RMSE 191.167 can  be used for predicting solar radiation with confidence.\n"
-          ]
-        }
-      ]
+        "id": "SJzaEGVuUj-a"
+      }
     },
     {
       "cell_type": "markdown",
